<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.detail.DetailFragment">

    <ProgressBar
        android:id="@+id/crypto_fetch_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crypto_not_found"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_crypto_found"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crypto_fetch_progress"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/img_crypto"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:paddingHorizontal="8dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_price"
        app:layout_constraintStart_toEndOf="@+id/img_crypto"
        app:layout_constraintTop_toTopOf="@id/img_crypto"
        tools:text="Bitcoin" />


    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_crypto"
        tools:text="165465" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/img_crypto"
        app:layout_constraintTop_toBottomOf="@+id/img_crypto"
        tools:text="bitcoin" />

    <TextView
        android:id="@+id/tv_symbol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toTopOf="@+id/tv_id"
        tools:text="btc" />

    <TextView
        android:id="@+id/tv_rank_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/coingecko_rank"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id" />

    <TextView
        android:id="@+id/tv_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_rank_text"
        tools:text="6" />

    <EditText
        android:id="@+id/et_max"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="0123456789."
        android:hint="@string/max_value"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/tv_rank_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_rank_text" />

    <Button
        android:id="@+id/btn_max_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/set_max_value"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/et_max"
        app:layout_constraintTop_toTopOf="@+id/et_max" />

    <EditText
        android:id="@+id/et_min"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="0123456789."
        android:hint="@string/min_value"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/et_max"
        app:layout_constraintTop_toBottomOf="@+id/et_max" />

    <Button
        android:id="@+id/btn_min_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/set_min_value"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/et_min"
        app:layout_constraintTop_toTopOf="@+id/et_min" />

    <Button
        android:id="@+id/btn_alert_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/alert_history"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>